Bug 445171 - Critical battery notification doesn't go away when charger is plugged in
Summary: Critical battery notification doesn't go away when charger is plugged in
Status: RESOLVED FIXED
Alias: None
Product: Powerdevil
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 5.23.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-08 18:23 UTC by Nishith Khanna
Modified: 2021-11-09 17:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23.4
Sentry Crash Report:


Attachments
Screenshot of powerdevil critical level setting (19.05 KB, image/png)
2021-11-08 18:31 UTC, Nishith Khanna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nishith Khanna 2021-11-08 18:23:58 UTC
Unlike the low battery notification which minimises when charger is plugged in the critical notification doesn't follow the same behavior and you have to manually close the notification.

I feel this shouldn't be the case as critical battery notification should follow the same behavior as low battery notification.


Operating System: Arch Linux
KDE Plasma Version: 5.23.2
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2
Kernel Version: 5.14.16-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i5-6200U CPU @ 2.30GHz
Memory: 11.6 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 520
Comment 1 Kai Uwe Broulik 2021-11-08 18:27:20 UTC
Do you have PowerDevil configured to not do anything (i.e. don't suspend/shutdown) when battery is critical? If so, I believe I see a bug.
Comment 2 Nishith Khanna 2021-11-08 18:31:56 UTC
Created attachment 143345 [details]
Screenshot of powerdevil critical level setting

Yes I have it at nothing. Have attached the screenshot regarding the same
Comment 3 Bug Janitor Service 2021-11-08 19:04:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/powerdevil/-/merge_requests/67
Comment 4 Kai Uwe Broulik 2021-11-09 17:18:46 UTC
Git commit 5668ded34f928ffce43ebe1defb775e70bbbb3b7 by Kai Uwe Broulik.
Committed on 08/11/2021 at 19:03.
Pushed by ngraham into branch 'master'.

Always dismiss critical battery notification

The timer isn't running when user chose "Do nothing" on critical battery
FIXED-IN: 5.23.4

M  +13   -9    daemon/powerdevilcore.cpp

https://invent.kde.org/plasma/powerdevil/commit/5668ded34f928ffce43ebe1defb775e70bbbb3b7
Comment 5 Nate Graham 2021-11-09 17:20:25 UTC
Git commit d8c5490c99bae9f979f6483dc7b0381121a4f997 by Nate Graham, on behalf of Kai Uwe Broulik.
Committed on 09/11/2021 at 17:20.
Pushed by ngraham into branch 'Plasma/5.23'.

Always dismiss critical battery notification

The timer isn't running when user chose "Do nothing" on critical battery
FIXED-IN: 5.23.4


(cherry picked from commit 5668ded34f928ffce43ebe1defb775e70bbbb3b7)

M  +13   -9    daemon/powerdevilcore.cpp

https://invent.kde.org/plasma/powerdevil/commit/d8c5490c99bae9f979f6483dc7b0381121a4f997