Always dismiss critical battery notification

The timer isn't running when user chose "Do nothing" on critical battery

BUG: 445171
FIXED-IN: 5.23.4


(cherry picked from commit 5668ded34f928ffce43ebe1defb775e70bbbb3b7)